# vhpc26

./: Cargo.toml  README.md  index.html  teststatus.md
.claude/: settings.local.json
cfp/: cfp-email.txt  cfp.text
src/: lib.rs  main.rs
tests/: smoke_test.rs
ui/: applinks.slint  dashboard.slint  main.slint  papers.slint  publication.slint  schedule.slint  sidebar.slint  speakers.slint  submission.slint  theme.slint  topics.slint
