[package]
name = "vhpc26"
version = "0.1.0"
edition = "2021"
default-run = "vhpc26-desktop"

[dependencies]
slint = "1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
i-slint-backend-testing = "1.8"

[build-dependencies]
slint-build = "1.8"

[lib]
name = "vhpc26"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vhpc26-desktop"
path = "src/main.rs"
